# agentlens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  analyzer.py  benchmark_report.py  bundle_export.py  casefile.py  cli.py  debug_inbox.py  diff_runs.py  explain.py  fingerprints.py  pyproject.toml  regression.py  viewer.py
docs/: ARCHITECTURE.md  EVENT_SCHEMA_V0.md  EXAMPLE_FAILURE.md  GO_TO_MARKET.md  LAUNCH_COPY_DRAFTS.md  LAUNCH_NOTES.md  LAUNCH_V0_2_2.md  NEXT_STEPS.md  REPO_METADATA.md
examples/: divergent_agent.py  failure_answer_agent.py  langgraph_agent_demo.py  minimal_agent.py  openai_wrapper_demo.py
scripts/: render_readme_screenshot.sh
sdk/python/agentlens/: __init__.py  client.py  langgraph_adapter.py  models.py  openai_wrapper.py  redaction.py
tests/: conftest.py  test_analyzer.py  test_benchmark_fixtures.py  test_benchmark_report.py  test_bundle_export.py  test_casefile.py  test_cli_flow.py  test_debug_inbox.py  test_diff_runs.py  test_divergent_example.py  test_explain.py  test_failure_answer_example.py  test_fingerprints.py  test_golden_outputs.py  test_langgraph_adapter.py  test_malformed_inputs.py  test_regression.py  test_sdk.py  test_viewer_output.py
tests/fixtures/benchmarks/: clarification_failure.jsonl  goal_partially_completed.jsonl  tool_result_ignored.jsonl  wrong_tool_argument.jsonl  wrong_tool_selected.jsonl
tests/goldens/: latest_diff.md  regression_golden-run.md
