[project]
name = "agentlens"
version = "0.2.1-alpha"
description = "Open-source runtime debugging, memory observability, and regression diffing for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Exploreunive" }
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
