[project]
name = "agentlens"
version = "0.2.2-alpha"
description = "Open-source runtime debugging, memory observability, and regression diffing for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Exploreunive" }
]
keywords = ["llm", "agents", "debugging", "observability", "tracing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Debuggers",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langgraph = [
  "langchain>=1.0.0",
  "langgraph>=1.0.0",
  "langchain-openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "sdk/python"}

[tool.setuptools.packages.find]
where = ["sdk/python"]
